View Issue Details

IDProjectCategoryView StatusLast Update
0033541CommunityOCCT:Modeling Algorithmspublic2024-07-17 12:56
Reporterofmetal Assigned Tobugmaster  
PrioritynormalSeveritymajor 
Status verifiedResolutionfixed 
PlatformWindowsOSVC++ 2015 
Product Version7.7.1 
Target VersionUnscheduledFixed in Version7.9.0 
Summary0033541: Modeling Algorithms - Simple sphere cut from cylinder fails
DescriptionCutting shape1 from shape2 produces invalid shape:
auto shape1 = BRepPrimAPI_MakeSphere(gp_Pnt(1, 1, 1), 1).Shape();
auto shape2 = BRepPrimAPI_MakeCylinder(1, 1).Shape();

If I slightly move shape1 down by 0.01, like this:
auto shape1 = BRepPrimAPI_MakeSphere(gp_Pnt(1, 1, 0.99), 1).Shape();

then operation succeeds.
Steps To Reproduce
auto shape1 = BRepPrimAPI_MakeSphere(gp_Pnt(1, 1, 1), 1).Shape();
auto shape2 = BRepPrimAPI_MakeCylinder(1, 1).Shape();

auto op = BRepAlgoAPI_Cut(shape2, shape1);
op.Build();
auto shape3 = op.Shape();

BRepAlgoAPI_Check analyzer;
analyzer.SetData(shape3);
analyzer.Perform();
printf("valid: %d\n", analyzer.IsValid());

Additional information
and documentation updates
This happens on the latest available release version 7.7.0 , but not on 7.4.0.
https://dev.opencascade.org/release
TagsNo tags attached.
Test case numberbugs/modalg_8/bug33541

Activities

oan

2024-01-26 17:54

developer   ~0114990

Reported problem has no relation to Mesh, it is a Modeling Algo problem.
Changing category.

git

2024-05-14 16:45

administrator   ~0115822

Branch CR33541 has been created by andrey.kaftasev_159541.

SHA-1: 18b93542a58e2dc9c160b794e1c29381c5dda213


Detailed log of new commits:

Author: akaftasev
Date: Tue May 14 14:45:43 2024 +0100

    0033541: Modeling Algorithms - Simple sphere cut from cylinder fails
    
    Test fix

git

2024-05-15 18:10

administrator   ~0115827

Branch CR33541 has been updated forcibly by andrey.kaftasev_159541.

SHA-1: e6cb9f36f5bfbc580be0495295100e79f0077cb4

git

2024-05-16 13:09

administrator   ~0115828

Branch CR33541 has been updated forcibly by andrey.kaftasev_159541.

SHA-1: c689ba7a008921a1ab4d332ad74b292aa68fab52

akaftasev

2024-05-16 16:10

developer   ~0115835

Please, review branches:
OCCT - CR33541
Products - CR33541

Results of testing:
http://jenkins-test-10.nnov.opencascade.com/view/CR33541-master-akaftasev/view/COMPARE/

git

2024-05-20 12:50

administrator   ~0115856

Branch CR33541_1 has been created by andrey.kaftasev_159541.

SHA-1: b7206e7774aff5243f2b361cd0310e8442bc4857


Detailed log of new commits:

Author: akaftasev
Date: Mon May 20 10:50:28 2024 +0100

    0033541: Modeling Algorithms - Simple sphere cut from cylinder fails
    
    Changed condition for combination of WLines into one.
    WLine would be excluded from consideration for merging, if one of its middle points between vertices is out of domain (does not lie on both surfaces).

git

2024-05-20 18:22

administrator   ~0115863

Branch CR33541_1 has been updated forcibly by andrey.kaftasev_159541.

SHA-1: c7264397508042ff121205d58940cb06c97ac926

akaftasev

2024-05-22 12:11

developer   ~0115875

Please, review branches:
OCCT - CR33541_1
Product - CR33541_1

Results of testing:
http://jenkins-test-10.nnov.opencascade.com/view/CR33541-master-akaftasev/view/COMPARE/

Note:
This branch based on #33615.
Please, integrate these branches together.

akaftasev

2024-06-14 16:48

developer   ~0116045

@dpasukhi, just a reminder

git

2024-07-17 12:56

administrator   ~0116211

Branch CR33541 has been deleted by vglukhik.

SHA-1: c689ba7a008921a1ab4d332ad74b292aa68fab52

git

2024-07-17 12:56

administrator   ~0116212

Branch CR33541_1 has been deleted by vglukhik.

SHA-1: c7264397508042ff121205d58940cb06c97ac926

Issue History

Date Modified Username Field Change
2023-11-28 16:39 ofmetal New Issue
2023-11-28 16:39 ofmetal Assigned To => oan
2024-01-26 17:54 oan Note Added: 0114990
2024-01-26 17:54 oan Assigned To oan => akaftasev
2024-01-26 17:54 oan Category OCCT:Mesh => OCCT:Modeling Algorithms
2024-01-27 18:53 dpasukhi Target Version => Unscheduled
2024-01-27 18:53 dpasukhi Summary Simple sphere cut from cylinder fails => Modeling Algorithms - Simple sphere cut from cylinder fails
2024-01-27 18:53 dpasukhi Steps to Reproduce Updated
2024-05-14 16:45 git Note Added: 0115822
2024-05-15 18:10 git Note Added: 0115827
2024-05-16 13:09 git Note Added: 0115828
2024-05-16 16:10 akaftasev Assigned To akaftasev => dpasukhi
2024-05-16 16:10 akaftasev Status new => resolved
2024-05-16 16:10 akaftasev Note Added: 0115835
2024-05-20 12:50 git Note Added: 0115856
2024-05-20 18:22 git Note Added: 0115863
2024-05-22 12:08 akaftasev Assigned To dpasukhi => andrey.kaftasev_159541
2024-05-22 12:08 akaftasev Status resolved => assigned
2024-05-22 12:11 akaftasev Assigned To andrey.kaftasev_159541 => dpasukhi
2024-05-22 12:11 akaftasev Status assigned => resolved
2024-05-22 12:11 akaftasev Note Added: 0115875
2024-06-14 16:48 akaftasev Note Added: 0116045
2024-07-08 21:03 dpasukhi Assigned To dpasukhi => bugmaster
2024-07-08 21:03 dpasukhi Status resolved => reviewed
2024-07-08 21:04 dpasukhi Status reviewed => verified
2024-07-08 21:04 dpasukhi Resolution open => fixed
2024-07-08 21:04 dpasukhi Fixed in Version => 7.9.0
2024-07-08 21:04 dpasukhi Test case number => bugs/modalg_8/bug33541
2024-07-17 12:56 git Note Added: 0116211
2024-07-17 12:56 git Note Added: 0116212