0033541: Modeling Algorithms - Simple sphere cut from cylinder fails

Changed condition for combination of WLines into one.
WLine would be excluded from consideration for merging, if one of its middle points between vertices is out of domain (does not lie on both surfaces).