src/IntPatch/IntPatch_WLineTool.cxx
@@ -1728,7 +1728,6 @@ static Standard_Boolean IsNeedSkipWL(const Handle(IntPatch_WLine)& theWL,
 {
   Standard_Real aFirstp, aLastp;
   Standard_Integer aNbVtx = theWL->NbVertex();
-  Standard_Boolean isNeedSkip = Standard_True;
 
   for (Standard_Integer i = 1; i < aNbVtx; i++) {
     aFirstp = theWL->Vertex (i).ParameterOnLine();
@@ -1739,14 +1738,13 @@ static Standard_Boolean IsNeedSkipWL(const Handle(IntPatch_WLine)& theWL,
     const IntSurf_PntOn2S& aPmid = theWL->Point (pmid);
     aPmid.Parameters (aU1, aV1, aU2, aV2);
 
-    if (!IsOutOfDomain (theBoxS1, theBoxS2, aPmid, theArrPeriods))
+    if (IsOutOfDomain (theBoxS1, theBoxS2, aPmid, theArrPeriods))
     {
-      isNeedSkip = Standard_False;
-      break;
+      return Standard_True;
     }
   }
 
-  return isNeedSkip;
+  return Standard_False;
 }
 
 //=======================================================================
